--- a/static/css/style.css
+++ b/static/css/style.css
@@ -352,6 +352,17 @@ button {
     text-transform: uppercase;
 }
 
+.about_text2 {
+    width: 100%;
+    float: left;
+    font-size: 40px;
+    color: #282828;
+    text-align: left;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+}
+
 .lorem_text{
      width: 100%;
      float: left;
@@ -748,7 +759,7 @@ top: 40px;
 left: 0;
 width: 0px;
 height: 2px;
-background: #2691d9;
+background: #ffffff;
 transition: .5s;
 }
 
@@ -919,7 +930,7 @@ a,a:hover{
 .myform-area{
   overflow: hidden;
   padding: 60px 0;
-  background: #faf4ff;/*ok*/
+  background: #9262b9;/*ok*/
   position: relative;
   padding-top: 100px;
   padding-bottom: 100px;
@@ -1169,4 +1180,29 @@ a,a:hover{
 .myform-area .form-area .form-input1 textarea:valid{
     border-bottom: 2px solid #fff;/*ok*/
 }
+
+
+
+
+
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #00c1fb; /* Blue */
+    border-radius: 50%;
+    width: 90px;
+    height: 90px;
+    animation: spin 3s linear infinite;
+    position:inherit;
+    padding-left: 50px;
+    padding-top: 20px;
+    margin-top: 30px;
+    margin-left: 300px;
+}
+
+@keyframes spin {
+0% { transform: rotate(0deg); }
+100% { transform: rotate(360deg); }
+}
+
+
 
