--- a/templates/result.html
+++ b/templates/result.html
@@ -72,7 +72,7 @@
                         You are almost <b>" {{ age }} "</b> years old <br>
                         You look  <b>" {{ emotion }} "</b> <br>
                         You are a <b>" {{ gender }} "</b> <br>
-                        Your Racial classification is <b>"{{ race }} "</b> <br>
+                        <!-- Your Racial classification is <b>"{{ race }} "</b> <br> -->
                     </h2>
                     
                     <h3> </h3>
