--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
   <!-- owl stylesheets --> 
   <link rel="stylesheet" href="static/css/owl.carousel.min.css">
   <link rel="stylesheet" href="static/css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen"> -->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
