--- a/templates/upload.html
+++ b/templates/upload.html
@@ -75,34 +75,26 @@
                         <input name="image" class="form-control form-control-lg" id="imgInp" type="file" accept="image/*"  >
                         <img id="output">
                         </div>
-                        <button id="upload-submit" type="submit" class="btn btn-primary">Submit</button> 
+                        <button id="upload-submit" type="submit" class="btn btn-primary btn-lg">Submit</button> 
                         
 
                         <h2></h2>
                         <div id="loader" class="loader"  ></div>
-                        <p class="website_text" style="padding-top: 40px; padding-bottom: 40px; font-size: 19px; ">please wait for 10 seconds to process your image .... </p>
+                        <p class="website_text" style="padding-top: 30px; padding-bottom: 35px; font-size: 19px; ">please wait for 10 seconds to process your image .... </p>
                     
                         <form runat="server">
+                            <div class="col-lg-6" style="float:none;margin:auto;">
                             <h2 style=" text-align: center;">
                                 age :  <b> {{ age }} </b> <br>
                                 emotion :  <b> {{ emotion }} </b> <br>
                                 gender : <b> {{ gender }} </b> <br>
                             </h2>
                         
-                            <!-- <input accept="image/*" type='file' id="imgInp" /> -->
-                            <!-- <img id="blah" src="#"  /> -->
+                            <img src="{{ image_link }}" style="width: 300px;">
+                            </div>
                         </form>           
 
-                          <h3> </h3>                 
-                            <!-- <div class="container">
-                            <div class='file-preview-image' style="text-align: left;"><img src="{{ image_link }}" , width="300px"></div>
-                            </div> -->
-                        
-
-
-                        
                     </form>
-
                 </div>
             </div>
         </div>       
