--- a/templates/bmr.html
+++ b/templates/bmr.html
@@ -1,66 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- mobile metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <!-- site metas -->
-    <title>Element</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">	
-    <!-- bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
-    <!-- style css -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-    <!-- Responsive-->
-    <link rel="stylesheet" href="static/css/responsive.css">
-    <!-- fevicon -->
-    <link rel="icon" href="static/images/fevicon.png" type="image/gif" />
-    <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="static/css/jquery.mCustomScrollbar.min.css">
-    <!-- Tweaks for older IEs-->
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <!-- owl stylesheets --> 
-    <link rel="stylesheet" href="static/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="static/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+{% extends "layout.html" %}
 
 
-</head>
-<body>
-	<div class="header_section">
-		<div class="container-fluid">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="/">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/bmr">BMR</a>
-                    </li>                    
-                    <li class="nav-item">
-                      <a class="nav-link" href="/login">LOGIN/SIGNUP</a>
-                    </li>                    
-
-                    <!-- <li class="nav-item">
-                      <a class="nav-link" href="/contact">CONTACT</a>
-                    </li> -->
-                  </ul>
-                </div>
-            </nav>
-		</div>
-	</div>
+{% block title %}
+    BMR calculator
+{% endblock %}
 
 
-
+{% block content %}
 <div class="footer_section layout_padding">
   <div class="footer_main">
     <div class="col-lg-6" style="float:none;margin:auto;">  
@@ -160,21 +106,7 @@
 
 
 
-    <!-- <script>src="static/js/bootstrap.js"</script> -->
-    <script src="static/js/jquery.min.js"></script>
-    <script src="static/js/popper.min.js"></script>
-    <script src="static/js/bootstrap.bundle.min.js"></script>
-    <script src="static/js/jquery-3.0.0.min.js"></script>
-    <script src="static/js/plugin.js"></script>
-    <!-- sidebar -->
-    <script src="static/js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="static/js/custom.js"></script>
-    <!-- javascript --> 
-    <script src="static/js/owl.carousel.min.js"></script>
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-
-</body>
-</html>
+{% endblock %}
 
 
 
