--- a/templates/index.html
+++ b/templates/index.html
@@ -1,131 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- mobile metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <!-- site metas -->
-    <title>Element</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">	
-    <!-- bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
-    <!-- style css -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-    <!-- Responsive-->
-    <link rel="stylesheet" href="static/css/responsive.css">
-    <!-- fevicon -->
-    <link rel="icon" href="static/images/fevicon.png" type="image/gif" />
-    <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="static/css/jquery.mCustomScrollbar.min.css">
-    <!-- Tweaks for older IEs-->
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <!-- owl stylesheets --> 
-    <link rel="stylesheet" href="static/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="static/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+{% extends "layout.html" %}
+
+{% block title %}
+    Home
+{% endblock %}
 
 
-
-</head>
-<body>
-    
-    <!-- all content goes here -->
-	<!--header section start -->
-	<div class="header_section">
-		<div class="container-fluid">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="/">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="/bmr">BMR</a>
-                    </li>                    
-                    <li class="nav-item">
-                      <a class="nav-link" href="/login">LOGIN/SIGNUP</a>
-                    </li>                    
-
-                    <!-- <li class="nav-item">
-                      <a class="nav-link" href="/contact">CONTACT</a>
-                    </li> -->
-                  </ul>
-                </div>
-            </nav>
-		</div>
-	</div>
-
-    <!--banner section start -->
+{% block content %}
     <div class="banner_section layout_padding">
       <div class="container">
-        <h1 class="banner_taital">Face Analysis App</h1>
-        <h2 class="free_text">Analyze facial attributes : age ,gender ,emotion. </h2>
-        <h3> </h3>
-        <h4> </h4>
-        <div class="read_bt_main">
-          <div class="button-73" role="button"><a href="/login">Try it Now</a></div>
-        </div>
-      </div>
-    </div>
-    <!--banner section end -->
+        <h1 class="banner_taital">Welcome To My Web Application  </h1>
 
-
-    <!--bg_main section start -->
-    <div class="container">
-      <div class="bg_main"><img src="static/images/bg-main.png"></div>
-    </div>
-
-
-
-
-
-	<!--service section start -->
-	<div class="service_section layout_padding">
-		<div class="container">
-			<h1 class="about_text">services</h1>
-			<p class="ipsum_text"></p>
-			<div class="service_section_2">
-				<div class="row">
-				    <div class="col-sm-12 col-lg-6">
-				    	<div class="icon_1"><img src="static/images/icon-3.png"></div>
-				    	<h1 class="website_text">Face Analysis</h1>
-				    	<p class="dolor_text">Analayze Face Attributes from given image</p>
-				    </div>
-				    <div class="col-sm-12 col-lg-6">
-				    	<div class="icon_1"><img src="static/images/icon-2.png"></div>
-				    	<h1 class="website_text">BMR Calculator</h1>
-				    	<p class="dolor_text">Calculates the minimum number of calories that your body needs to perform basic functions </p>
-				    </div>
-			    </div>
+		<div class="service_section layout_padding" style="padding-top:10px; padding-right: 30px;">
+			<div class="container" >
+				<h1 class="about_text">Applications</h1>
+				<p class="ipsum_text"></p>
+				<div class="service_section_2">
+					<div class="row">
+						<div class="col-sm-8 col-lg-4" style="padding-top:13px; padding-left:65px;">
+							<div class="icon_1"><img src="static/images/icon-3.png"></div>
+							<h1 class="website_text" style="font-size:28px;"><a href="/login"><u>Face Analysis</u></a></h1>
+							<p class="dolor_text">Analyze Face Attributes</p>
+						</div>
+						<div class="col-sm-10 col-lg-4" style="padding-top:9px; padding-left:26px;">
+							<div class="icon_2" style="padding-left:128px; float:center;"><img src="static/images/icon-2.png"></div>
+							<h1 class="website_text" style="font-size:29px; padding-top:40px;"><a href="/bmr"><u>BMR Calculator</u></a></h1>
+							<p class="dolor_text" style="padding-top:1px;">Calculates the minimum number of calories that your body needs to perform basic functions </p>
+						</div>
+						<div class="col-sm-6 col-lg-4" style="padding-top:9px;">
+							<div class="icon_3" style="padding-right:25px; float:center; text-align:center;  "><img src="static/images/icon-3.png"></div>
+							<h1 class="website_text" style="font-size:28px;"><a href="/image_classification"><u>Image classification</u></a></h1>
+							<p class="dolor_text">Classify image using YOLOv8 </p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-	<!--service section end -->
+</div>
 
 
-
-
-    <!-- <script>src="static/js/bootstrap.js"</script> -->
-
-    <script src="static/js/jquery.min.js"></script>
-    <script src="static/js/popper.min.js"></script>
-    <script src="static/js/bootstrap.bundle.min.js"></script>
-    <script src="static/js/jquery-3.0.0.min.js"></script>
-    <script src="static/js/plugin.js"></script>
-    <!-- sidebar -->
-    <script src="static/js/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="static/js/custom.js"></script>
-    <!-- javascript --> 
-    <script src="static/js/owl.carousel.min.js"></script>
-    <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-
-</body>
-</html>
+  {% endblock %}
