--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,73 +1,19 @@
-
-<!DOCTYPE html>
-<html lang="en"  dir="ltr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- mobile metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <!-- site metas -->
-    <title>Element</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">	
-    <!-- bootstrap css -->
-    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
-    <!-- style css -->
-    <link rel="stylesheet" type="text/css" href="static/css/style.css">
-    <!-- Responsive-->
-    <link rel="stylesheet" href="static/css/responsive.css">
-    <!-- fevicon -->
-    <link rel="icon" href="static/images/fevicon.png" type="image/gif" />
-    <!-- Scrollbar Custom CSS -->
-    <link rel="stylesheet" href="static/css/jquery.mCustomScrollbar.min.css">
-    <!-- Tweaks for older IEs-->
-    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <!-- owl stylesheets --> 
-    <link rel="stylesheet" href="static/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="static/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+{% extends "layout.html" %}
 
 
-</head>
-<body>
-    
-  
-    <div class="header_section">
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">HOME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/bmr">BMR</a>
-                    </li>                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="/login">LOGIN/SIGNUP</a>
-                    </li>                    
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </div>
+{% block title %}
+    Upload image
+{% endblock %}
 
 
+{% block content %}
     <section class="myform-area" >
         <div class="container" style=" padding-bottom: 145px;">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <p> </p>
                     <p> </p>
-                    <h1 style=" padding-top: 40px;">Upload your face image : </h1>
+                    <h1 style=" padding-top: 40px;">Upload your Face image : </h1>
                     <p> </p>
 
                     <form method="post" enctype="multipart/form-data"> 
@@ -85,28 +31,23 @@
         </div>       
     </section>
 
-
-
     <script>src="static/js/bootstrap.js"
         document.getElementById("loader").style.display ="none";
         function openTest() {
             document.getElementById("loader").style.display = "block";
         }
         document.getElementById('upload-submit').addEventListener('click', openTest);
-         
-    </script>
-    <script>
+
 
         imgInp.onchange = evt => {
-            const [file] = imgInp.files
+            const [file] = imgInp.files;
             if (file) {
-              blah.src = URL.createObjectURL(file)
+              blah.src = URL.createObjectURL(file);
             }
           }
-
     </script>
-</body>
-</html>
+
+{% endblock %}
 
 
 
