--- a/templates/result.html
+++ b/templates/result.html
@@ -21,7 +21,7 @@
                     <form runat="server">
                         <div class="col-lg-6" style="float:none;margin:auto;">
                         <h2 style=" text-align: center;">
-                            age :  <b> {{ age }} </b> <br>
+                            predicted age :  <b> {{ age }} </b> <br>
                             <!-- emotion :  <b> {{ emotion }} </b> <br> -->
                             <!-- gender : <b> {{ gender }} </b> <br> -->
                         </h2>
