--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,18 @@
 
 {% block content %}
 
+
+{% with messages = get_flashed_messages(with_categories=true) %}
+	{% if messages %}
+		{% for category , message in messages %}
+			<div class="alert alert-{{ category }}" role="alert" style="padding-top:30px; padding-bottom:10px;">
+				{{ message }}
+			</div>
+		{% endfor %}
+	{% endif %}
+{% endwith %}
+
+
   <section class="myform-area">
     <div class="container" >
         <div class="row justify-content-center" >
@@ -32,6 +44,19 @@
                                 <button class="myform-btn">Submit</button>
                                 <h4 style="padding-top:9px; padding-left:30px;">Don't have an account ? <a href="/register"><u>Register</u></a></h4>
                             </div>
+
+
+                            {% with messages = get_flashed_messages(with_categories=true) %}
+                                {% if messages %}
+                                    {% for category , message in messages %}
+                                        <h4 class="alert alert-{{ category }}" role="alert" style="padding-top:20px;">
+                                            {{ message }}
+                                        </h4>
+                                    {% endfor %}
+                                {% endif %}
+                            {% endwith %}
+
+
                         </form>
                     </div>
                 </div>
