--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,12 +40,9 @@
             <ul class="navbar-nav">
               <li class="nav-item active">
                 <a class="nav-link" href="/">HOME</a>
-              </li>
+              </li>                   
               <li class="nav-item">
-                <a class="nav-link" href="/bmr">BMR</a>
-              </li>                    
-              <li class="nav-item">
-                <a class="nav-link" href="/register">REGISTER</a>
+                <a class="nav-link" href="/register">SIGNUP</a>
               </li>                
               <li class="nav-item">
                 <a class="nav-link" href="/login">LOGIN</a>
