--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,6 +7,17 @@
 
 
 {% block content %}
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category , message in messages %}
+                <h4 class="alert alert-{{ category }}" style="padding-top:30px; padding-bottom:10px;">
+                    {{ message }}
+                </h4>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
     <section class="myform-area" >
         <div class="container" style=" padding-bottom: 145px;">
             <div class="row justify-content-center">
