--- a/templates/classification_result.html
+++ b/templates/classification_result.html
@@ -24,25 +24,24 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <p> </p>
-                    <p> </p>
-                    <h1 style=" padding-top: 40px;">Upload your image : </h1>
+                    <h1 style=" padding-top: 45px;">Upload your image : </h1>
                     <p> </p>
                     <form method="post" enctype="multipart/form-data"> 
                         <div>
                         <input name="image" class="form-control form-control-lg" id="imgInp" type="file" accept="image/*"  >
                         <img id="output">
                         </div>
-                        <button id="upload-submit" type="submit" class="btn btn-primary btn-lg">Submit</button>         
+                        <p style="color:black"> ps : Here, you can only upload "jpg" or "jpeg" images ,and not "png" ! </p>
+                        <button id="upload-submit" type="submit" class="btn btn-primary btn-lg">Submit</button>  
+                               
                         <p> </p>
                         <span></span>
                         <form runat="server">
                         <div id="loader" class="loader"  ></div>
-                        <p class="website_text" style="padding-top: 100px; padding-bottom: 1px; font-size: 40px; ">  classification Result : </p>
-                        
-                            <div class="col-lg-8" style="float:none;margin:auto;">
-                            <img src="{{ image_link }}" style="width: 800px;">
-                            </div>
                         </form>
+                        <div class="col-lg-8" style="float:none;margin:auto;">
+                        <img src="{{ image_link }}" style="width: 900px;">
+                        </div>
                     </form>
                 </div>
             </div>
