--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,6 @@
     <div class="banner_section layout_padding">
       <div class="container">
         <h1 class="banner_taital">Welcome To My Web Application  </h1>
-
 		<div class="service_section layout_padding" style="padding-top:10px; padding-right: 30px;">
 			<div class="container" >
 				<h1 class="about_text">Applications</h1>
@@ -30,7 +29,7 @@
 					<div class="row">
 						<div class="col-sm-8 col-lg-4" style="padding-top:13px; padding-left:65px;">
 							<div class="icon_1"><img src="static/images/icon-3.png"></div>
-							<h1 class="website_text" style="font-size:28px;"><a href="/upload"><u>Face Analysis</u></a></h1>
+							<h1 class="website_text" style="font-size:29px;"><a href="/upload"><u>Face Analysis</u></a></h1>
 							<p class="dolor_text">Analyze Face Attributes</p>
 						</div>
 						<div class="col-sm-10 col-lg-4" style="padding-top:9px; padding-left:26px;">
@@ -40,8 +39,21 @@
 						</div>
 						<div class="col-sm-6 col-lg-4" style="padding-top:9px;">
 							<div class="icon_3" style="padding-right:25px; float:center; text-align:center;  "><img src="static/images/icon-3.png"></div>
-							<h1 class="website_text" style="font-size:28px;"><a href="/image_classification"><u>Image classification</u></a></h1>
+							<h1 class="website_text" style="font-size:27px;"><a href="/image_classification"><u>Image classification</u></a></h1>
 							<p class="dolor_text">Classify image using YOLOv8 </p>
+						</div>
+					</div>
+
+					<div class="row justify-content-around">
+						<div class="col-5" style="padding-top:9px; padding-left:26px;">
+							<div class="icon_2" style="padding-left:165px; float:center;"><img src="static/images/pose.png"></div>
+							<h1 class="website_text" style="font-size:27px; padding-top:40px; padding-left:26px;"><a href="/pose_detection"><u>Pose Landmark Detection</u></a></h1>
+							<p class="dolor_text" style="padding-top:1px; padding-left:26px;">MediaPipe Pose Landmarker lets you detect landmarks of your body</p>
+						</div>
+						<div class="col-5" style="padding-top:9px; padding-left:26px;">
+							<div class="icon_3" style="padding-right:9px; float:center; text-align:center;  "><img src="static/images/mind1.png"></div>
+							<h1 class="website_text" style="font-size:28px;"><a href="/mind_reader"><u>Mind Reader</u></a></h1>
+							<p class="dolor_text"> It Will guess the number which is in your mind !</p>
 						</div>
 					</div>
 				</div>
@@ -51,4 +63,4 @@
 </div>
 
 
-  {% endblock %}
+{% endblock %}
