--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,19 +6,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- mobile metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <!-- site metas -->
     <title>Element</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">	
-    <!-- bootstrap css -->
     <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css">
-    <!-- style css -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
-    <!-- Responsive-->
     <link rel="stylesheet" href="static/css/responsive.css">
     <link rel="icon" href="static/images/fevicon.png" type="image/gif" />
     <link rel="stylesheet" href="static/css/jquery.mCustomScrollbar.min.css">
@@ -67,6 +62,7 @@
     <script src="static/js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="static/js/custom.js"></script>
     <script src="static/js/owl.carousel.min.js"></script>
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 
 </body>
 </html>
