--- a/templates/result.html
+++ b/templates/result.html
@@ -2,28 +2,17 @@
 
 
 {% block title %}
-    Upload image
+    result Upload image  
 {% endblock %}
 
 
 {% block content %}
-
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category , message in messages %}
-                <h4 class="alert alert-{{ category }}" role="alert" style="padding-top:30px; padding-bottom:10px;">
-                    {{ message }}
-                </h4>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
 
     <section class="myform-area">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <p> </p>
-
                     <h2></h2>
                     <div id="loader" class="loader"  ></div>
                     <p class="website_text" style="padding-top: 1px; padding-bottom: 35px; font-size: 40px; ">   Prediction Result  </p>
@@ -32,19 +21,15 @@
                         <div class="col-lg-6" style="float:none;margin:auto;">
                         <h2 style=" text-align: center;">
                             predicted age :  <b> {{ age }} </b> <br>
-                            <!-- emotion :  <b> {{ emotion }} </b> <br> -->
-                            <!-- gender : <b> {{ gender }} </b> <br> -->
                         </h2>
                     
                         <img src="{{ image_link }}" style="width: 500px;">
                         </div>
                     </form>           
-
                 </div>
             </div>
         </div>       
     </section>
-
 
 
     <script>src="static/js/bootstrap.js"
@@ -58,6 +43,21 @@
 
     <script>src="static/js/bootstrap.js"</script>
 {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
